# data-engineering-project

./: .pre-commit-config.yaml  README.md  ingest_data1.py  pyproject.toml
