[tool.poetry]
name = "de-project"
version = "0.1.0"
description = "A data engineering project using GCP, Terraform, Docker, SQL, Mage, dbt, and Spark."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "Apache"

[tool.poetry.dependencies]
python = "^3.11"
dbt-core = "^1.7.4"
dbt-bigquery = "^1.7.2"
numpy = "^1.26.2"
pandas = "^2.1.3"
pgcli = "^4.0.1"
mycli = "^1.27.0"
psycopg = "^3.1.16"
psycopg-binary = "^3.1.16"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.23"

[tool.poetry.dev-dependencies]
sqlfluff = "^2.3.5"
sqlfluff-templater-dbt = "^2.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.sqlfluff.core]
dialect = "bigquery"
templater = "dbt"
sql_file_exts = ".sql,.sql.j2,.dml,.ddl"
rules = "layout"

[sqlfluff.indentation]
tab_space_size = 4
